# chess-engine

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md
benches/: benchmarks.rs
src/: bitboard.rs  board.rs  color.rs  constants.rs  error.rs  evaluate.rs  fen.rs  file.rs  lib.rs  main.rs  mv.rs  perft.rs  rank.rs  square.rs  traversal_path.rs  uci.rs  vector.rs  zobrist.rs
