[package]
name = "chess-engine"
version = "0.1.0"
authors = ["bo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
log4rs = "1.0"
lru = "0.7"
nom = "7.1"
log-panics = { version = "2.0", features = ["with-backtrace"] }
cached = "0.33"
lazy_static = "1.4"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "benchmarks"
harness = false
