[package]
name = "chess-engine"
version = "0.1.0"
authors = ["bo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
log4rs = "1.0"
nom = "7.1"
log-panics = { version = "2.0", features = ["with-backtrace"] }
lazy_static = "1.4"
paste = "0.1"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}
colored = "2.0"
itertools = "0.10"

[[bench]]
name = "benchmarks"
harness = false
